# Video-Editor

./: .gitignore  main.py  pyproject.toml
core/: apply_overlay.py  transcribe_audio.py
