[tool.poetry]
name = "videoeditor"
version = "0.1.0"
description = ""
authors = ["natanfds <natanfernandesdossantos@zohomail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moviepy = "^1.0.3"
pydub = "^0.25.1"
speechrecognition = "^3.11.0"
whisper-timestamped = "^1.15.6"
onnxruntime = "^1.20.0"
torchaudio = "^2.5.1"
transformers = "^4.46.2"
pysimplegui = "^5.0.7"
pafy = "^0.5.5"
youtube-dl = "^2021.12.17"
ursina = "^7.0.0"
panda3d = "^1.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
